fix tooltip visibility on desktop

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -223,6 +223,7 @@ body {
 }
 
 .tooltip .tooltiptext {
+  visibility: hidden;
   font-size: 1rem;
   width: 120px;
   background-color: black;
@@ -236,6 +237,7 @@ body {
   left: 50%;
   margin-left: -60px;
   cursor:context-menu;
+  opacity: 0.7;
   @media (max-width: 900px) {
     visibility:visible;
     width: 200px;
@@ -245,9 +247,6 @@ body {
     padding: auto;
     padding-top: 5px;
     font-size: 2;
-    opacity: 0.7;
-    .tooltiptext {
-    }
   }
 }
 
